update movealarm serv
add insert and update member

--- a/MoveAlarmServ/build.gradle
+++ b/MoveAlarmServ/build.gradle
@@ -19,8 +19,8 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'war'
 
 jar {
-    baseName = 'deploy'
-    version = '0.0.1-SNAPSHOT'
+    baseName = 'MoveAlarm'
+    version = '0.1.2'
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
