--- a/MoveAlarmServ/build.gradle
+++ b/MoveAlarmServ/build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'war'
 
 jar {
     baseName = 'MoveAlarm'
-    version = '0.1.2'
+    version = '0.1.3'
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -34,6 +34,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('mysql:mysql-connector-java:5.1.36')
+    compile('com.google.code.gson:gson:2.4')
     testCompile('org.springframework.boot:spring-boot-starter-test') 
 }
 
