--- a/MoveAlarmAnd/volleyball/MyApplication5/app/src/main/AndroidManifest.xml
+++ b/MoveAlarmAnd/volleyball/MyApplication5/app/src/main/AndroidManifest.xml
@@ -115,6 +115,11 @@
             android:label="@string/title_activity_event"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
+        <activity
+            android:name=".HowtoActivity"
+            android:label="@string/title_activity_howto"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
     </application>
 
 </manifest>
